sandbox/output
TicketDispenserTest.java:63: error: cannot find symbol
        int firstVipTicketTurnNumber = vipTicketDispenser.getTurnTicket().getTurnNumber();
                                       ^
  symbol:   variable vipTicketDispenser
  location: class TicketDispenserTest
1 error
